[project]
name = "mcp-server-cloudmonitor"
version = "0.0.1"
description = "MCP server for Cloud Monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.0",
    "volcengine-python-sdk==2.0.1",
]

[project.scripts]
mcp-server-cloudmonitor-stdio = "mcp_server_cloudmonitor.stdio:main"
mcp-server-cloudmonitor-sse = "mcp_server_cloudmonitor.sse:main"
mcp-server-cloudmonitor-streamable = "mcp_server_cloudmonitor.streamable_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true