[project]
name = "mcp-server-sec-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mcp>=1.12.0",
    "pip>=25.0.1",
    "requests>=2.32.3",
    "volcengine-python-sdk>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-sec-agent = "mcp_server_sec_agent.main:main"
