[project]
name = "mcp-server-tls"
version = "0.1.2"
description = "TLS MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "lz4>=4.4.4",
    "mcp[cli]>=1.12.0",
    "python-dotenv>=1.0.1",
    "volcengine>=1.0.175",
    "httpcore==1.0.9",
]

[project.scripts]
mcp-server-tls = "mcp_server_tls.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_tls"]
