[project]
name = "mcp-server-vpn"
version = "1.0.0"
description = "VPN MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "volcengine-python-sdk>=3.0.1",
    "volcengine>=1.0.101",
]

[project.scripts]
mcp-server-vpn = "mcp_server_vpn.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
